Improved Java 9 compatibility: added activation-1.1.1.jar